added heartbeat and completed to client
